--- a/src/TodoGrafana/appsettings.json
+++ b/src/TodoGrafana/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TodoDatabase": {
+    "ConnectionString": "mongodb://mongoadmin:secret@mongo:27017",
+    "DatabaseName": "TodoDb",
+    "TodoCollectionName": "Todo"
+  }
 }
